--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "author": "Ygor Evaldt",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^5.1.1",
         "knex": "^3.1.0",
         "sqlite3": "^5.1.7",
         "zod": "^3.23.8"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.2",
         "@types/node": "^22.7.0",
         "eslint": "^9.11.1",
         "globals": "^15.9.0",
