--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "API para controle de dieta diária",
     "main": "index.js",
     "scripts": {
-        "dev": "",
+        "dev": "tsx --watch --env-file .env src/server.ts",
         "knex": "node --env-file .env --import tsx ./node_modules/knex/bin/cli.js",
         "lint": "eslint src -ext .ts --fix",
         "test": "vitest"
@@ -13,7 +13,9 @@
     "author": "Ygor Evaldt",
     "license": "ISC",
     "dependencies": {
+        "@fastify/cookie": "^10.0.1",
         "bcrypt": "^5.1.1",
+        "fastify": "^5.0.0",
         "knex": "^3.1.0",
         "sqlite3": "^5.1.7",
         "zod": "^3.23.8"
