--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "version": "1.0.0",
     "description": "API para controle de dieta diária",
     "main": "index.js",
+    "engines": {
+        "node": ">= 18"
+    },
     "scripts": {
         "dev": "tsx --watch --env-file .env src/server.ts",
         "knex": "node --env-file .env --import tsx ./node_modules/knex/bin/cli.js",
@@ -14,8 +17,10 @@
     "license": "ISC",
     "dependencies": {
         "@fastify/cookie": "^10.0.1",
+        "@fastify/cors": "^10.0.1",
         "bcrypt": "^5.1.1",
         "fastify": "^5.0.0",
+        "fastify-type-provider-zod": "^3.0.0",
         "knex": "^3.1.0",
         "sqlite3": "^5.1.7",
         "zod": "^3.23.8"
