--- a/package.json
+++ b/package.json
@@ -16,17 +16,17 @@
     "author": "Ygor Evaldt",
     "license": "ISC",
     "dependencies": {
-        "@fastify/cookie": "^10.0.1",
-        "@fastify/cors": "^10.0.1",
         "bcrypt": "^5.1.1",
-        "fastify": "^5.0.0",
-        "fastify-type-provider-zod": "^3.0.0",
+        "express": "^4.21.0",
+        "inversify": "^6.0.2",
         "knex": "^3.1.0",
+        "reflect-metadata": "^0.2.2",
         "sqlite3": "^5.1.7",
         "zod": "^3.23.8"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.2",
+        "@types/express": "^5.0.0",
         "@types/node": "^22.7.0",
         "eslint": "^9.11.1",
         "globals": "^15.9.0",
