--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
         "esModuleInterop": true,
         "skipLibCheck": true,
         "moduleResolution": "node16",
-        "experimentalDecorators": true
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true
     }
 }
