--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
         "@types/bcrypt": "^5.0.2",
         "@types/express": "^5.0.0",
         "@types/node": "^22.7.0",
+        "@types/supertest": "^6.0.2",
         "eslint": "^9.11.1",
         "globals": "^15.9.0",
+        "supertest": "^7.0.0",
         "tsx": "^4.19.1",
         "typescript": "^5.6.2",
         "typescript-eslint": "^8.7.0",
